# rustic-bildge

./: .gitignore  Cargo.toml  README.org  build.rs
html/: 404.html  index.html
src/: configurator.rs  main.rs  manager.rs  server.rs  state.rs  time.rs
src/configurator/: structure.rs
src/manager/: command.rs
src/server/: backend.rs  frontpage.rs  message.rs  servermanager.rs  util.rs
